<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">HiShoot2i</string>
    <string name="version_format">version %s</string>
    <string name="apply_template_format">Apply template: %s</string>
    <string name="background">Background</string>
    <string name="badge">Badge</string>
    <string name="blur">Blur</string>
    <string name="color_mixer">Color Mixer</string>
    <string name="color_pipette">Color Pipette</string>
    <string name="double_">Double</string>
    <string name="font">Font</string>
    <string name="frame">Frame</string>
    <string name="glare">Glare</string>
    <string name="no_content_here">No content here</string>
    <string name="options">Options</string>
    <string name="screen">Screen</string>
    <string name="screen_shoot_1">Screen Shoot 1</string>
    <string name="screen_shoot_2">Screen Shoot 2</string>
    <string name="search">Search…</string>
    <string name="settings">Settings</string>
    <string name="shadow">Shadow</string>
    <string name="show">Show</string>
    <string name="size">Size</string>
    <string name="template">Template</string>
    <string name="template_htz_imported_format" formatted="true">Template Htz %s imported</string>
    <string name="template_htz_converted_format" formatted="true">Template Htz %s converted</string>
    <string name="template_htz_exported_format" formatted="true">Template Htz exported to %s</string>
    <string name="template_htz_removed_format" formatted="true">Template Htz %s removed</string>
    <string name="template_manager">Template Manager</string>
    <string name="template_v2_and_v3">(Template v2 and v3)</string>
    <!--TemplateTool-->
    <string name="template_info_format">author: %1$s\ndesc: %2$s\ninstalled: %3$s</string>
    <!--BackgroundTool-->
    <string name="background_mode_prompt">Background Mode</string>
    <string name="color">Color</string>
    <string name="image">Image</string>
    <string name="transparent">Transparent</string>
    <string name="hex_color_prefix">Hex Color </string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="version">Version</string>
    <string name="date">Date</string>
    <string name="position">Position</string>
    <!-- NOTE: background_mode_values order must sync with [entity.BackgroundMode] -->
    <string-array name="background_mode_values">
        <item>@string/color</item>
        <item>@string/image</item>
        <item>@string/transparent</item>
    </string-array>
    <!--Badge Position-->
    <string name="badge_font_prompt">Badge Font</string>
    <string name="bp_prompt">Badge Position</string>
    <string name="bp_left_top">Left Top</string>
    <string name="bp_center_top">Center Top</string>
    <string name="bp_right_top">Right Top</string>
    <string name="bp_left_middle">Left Middle</string>
    <string name="bp_center_middle">Center Middle</string>
    <string name="bp_right_middle">Right Middle</string>
    <string name="bp_left_bottom">Left Bottom</string>
    <string name="bp_center_bottom">Center Bottom</string>
    <string name="bp_right_bottom">Right Bottom</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <!-- NOTE: badge_position_values order must sync with [entity.BadgePosition] -->
    <string-array name="badge_position_values">
        <item>@string/bp_left_top</item>
        <item>@string/bp_center_top</item>
        <item>@string/bp_right_top</item>
        <item>@string/bp_left_middle</item>
        <item>@string/bp_center_middle</item>
        <item>@string/bp_right_middle</item>
        <item>@string/bp_left_bottom</item>
        <item>@string/bp_center_bottom</item>
        <item>@string/bp_right_bottom</item>
    </string-array>
    <string name="scale_fill">Scale Fill</string>
    <string name="center_crop">Center Crop</string>
    <string name="manual_crop">Manual Crop</string>
    <string name="themes">Themes</string>
    <string name="follow_system">Follow system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pick_image">Pick image</string>
    <string name="share">Share</string>
    <string name="tap_to_view">Tap to view</string>
    <string name="ticker_saving">Saving…</string>
    <string name="sub_text_error">Ups, sorry :(</string>
    <string name="badge_font">Badge Font</string>
    <string name="include_system_font">Include System font</string>
    <string name="jpeg">Jpeg</string>
    <string name="png">Png</string>
    <string name="webp">Webp</string>
    <string name="save_option">Save option</string>
    <string name="format">Format</string>
    <string name="save_format">Save format</string>
    <string name="quality">Quality</string>
    <string name="cache">Cache</string>
    <string name="image_cache">Image cache</string>
    <!-- NOTE: save_option_values order must sync with [BitmapFactory.CompressFormat] -->
    <string-array name="save_option_values">
        <item>@string/jpeg</item>
        <item>@string/png</item>
        <item>@string/webp</item>
    </string-array>
    <string name="on_progress">Please wait, on progress …</string>
    <string name="on_pipette">On pipette</string>
    <string name="notification">Notification</string>
    <string name="custom_directory">Set Custom Directory</string>
    <!-- Save confirm dialog -->
    <string name="save_image">Save Image</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok_btn_txt">OK</string>
    <!-- Popup menu htz -->
    <string name="convert_to_htz">Convert to Htz</string>
    <string name="export_htz">Export Htz</string>
    <string name="remove_htz">Remove Htz</string>
    <!-- -->
    <string name="quality_desc">Quality of image</string>
    <string name="red_slider">Red slider</string>
    <string name="green_slider">Green slider</string>
    <string name="alpha_slider">Alpha slider</string>
    <string name="blue_slider">Blue slider</string>
    <string name="sort_by_date_desc">Sort by date desc</string>
    <string name="sort_by_date_asc">Sort by date asc</string>
    <string name="sort_by_name_desc">Sort by name desc</string>
    <string name="sort_by_type_desc">Sort by type desc</string>
    <string name="sort_by_type_asc">Sort by type asc</string>
    <string name="sort_by_name_asc">Sort by name asc</string>
    <string name="main_fab_desc">Save result</string>
    <string name="template_htz_imported_desc">Import template Htz</string>
    <string name="badge_color_pick_desc">Badge color pick</string>
    <string name="badge_size_desc">Badge size</string>
    <string name="badge_font_desc">Badge font</string>
    <string name="goto_web_desc">Goto Web</string>
    <string name="goto_source_desc">Goto Source</string>
    <string name="clear_image_cache">Clear image cache</string>
</resources>
