<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_template"
        android:icon="@drawable/ic_template_black_24dp"
        android:title="@string/template"
        app:iconTint="@color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_screen"
        android:icon="@drawable/ic_phone_android_black_24dp"
        android:title="@string/screen"
        app:iconTint="@color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_background"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/background"
        app:iconTint="@color/white"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_badge"
        android:icon="@drawable/ic_style_black_24dp"
        android:title="@string/badge"
        app:iconTint="@color/white"
        app:showAsAction="always" />
    <!--<item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_photo_filter_black_24dp"
        android:title="@string/badge"
        app:iconTint="@color/white"
        app:showAsAction="always" />-->
</menu>