<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    tools:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/textSaveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_image"
        android:textAppearance="@style/TextAppearance.App.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:text="@string/format"
        android:textAppearance="@style/TextAppearance.App"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSaveImage" />

    <Spinner
        android:id="@+id/dialog_save_format"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:dropDownSelector="?colorAccent"
        android:entries="@array/save_option_values"
        android:minHeight="48dp"
        android:popupBackground="?attr/colorSurface"
        android:prompt="@string/save_format"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/textFormat"
        app:layout_constraintStart_toStartOf="@+id/textFormat"
        app:layout_constraintTop_toBottomOf="@+id/textFormat" />

    <TextView
        android:id="@+id/textQuality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="8dp"
        android:text="@string/quality"
        android:textAppearance="@style/TextAppearance.App"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_format" />

    <com.google.android.material.slider.Slider
        android:id="@+id/dialog_save_quality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/quality_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuality"
        tools:value="50.0" />

    <Button
        android:id="@+id/action_save_cancel"
        style="@style/AppWidget.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/cancel"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/action_save_ok"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_quality" />

    <Button
        android:id="@+id/action_save_ok"
        style="@style/AppWidget.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ok_btn_txt"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintLeft_toRightOf="@+id/action_save_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_save_quality" />

</androidx.constraintlayout.widget.ConstraintLayout>
