<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp8"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/toolBackgroundImageOptionGroup"
            style="@style/AppWidget.RadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checkedButton="@id/toolBackgroundImageOptionScaleFill"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/toolBackgroundImageOptionScaleFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scale_fill" />

            <RadioButton
                android:id="@+id/toolBackgroundImageOptionCenterCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/center_crop" />

            <RadioButton
                android:id="@+id/toolBackgroundImageOptionManualCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/manual_crop" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolBackgroundImagePick"
            style="@style/AppWidget.TextImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:layout_margin="@dimen/dp24"
            android:text="@string/pick_image"
            app:drawableTint="?attr/colorAccent"
            app:drawableTopCompat="@drawable/ic_image_black_24dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toolBackgroundImageSwitchBlur"
            style="@style/AppWidget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/blur" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/toolBackgroundImageSeekBlur"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>