<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/toolLayoutMinHeight"
    android:orientation="vertical"
    android:padding="@dimen/toolLayoutMargin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/screen"
            android:textAppearance="@style/TextAppearance.App.Title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toolScreenDouble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/double_"
            tools:checked="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/toolScreen1"
            style="@style/AppWidget.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_shoot_1"
            app:icon="@drawable/ic_image"
            app:iconGravity="textStart"
            app:textAllCaps="false" />

        <Button
            android:id="@+id/toolScreen2"
            style="@style/AppWidget.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/screen_shoot_2"
            app:icon="@drawable/ic_image"
            app:iconGravity="textStart"
            app:textAllCaps="false"
            tools:enabled="false" />

    </LinearLayout>

</LinearLayout>
