<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/badge_font"
            android:textAppearance="@style/TextAppearance.App.Title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_badge_system_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/include_system_font"
            android:textAppearance="@style/TextAppearance.App"
            tools:checked="true" />

        <Button
            android:id="@+id/setting_badge_custom_font_dir"
            style="@style/AppWidget.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/custom_directory"
            app:icon="@drawable/ic_launch"
            app:iconGravity="textEnd"
            app:textAllCaps="false" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>